// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`big STEM tool render goldens (default state) > renders + pins a digest for appLab 1`] = `
{
  "buttons": 26,
  "inputs": 5,
  "lengthBucket": 66,
  "selects": 0,
  "sha": "f7902f58f1c9f45e",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for assessmentLiteracy 1`] = `
{
  "buttons": 10,
  "inputs": 0,
  "lengthBucket": 30,
  "selects": 0,
  "sha": "cb7f0729251badab",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for beehive 1`] = `
{
  "buttons": 65,
  "inputs": 4,
  "lengthBucket": 310,
  "selects": 0,
  "sha": "32554d298d523234",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for birdLab 1`] = `
{
  "buttons": 127,
  "inputs": 0,
  "lengthBucket": 718,
  "selects": 0,
  "sha": "4f8e650f475edb95",
  "svgs": 2,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for cephalopodLab 1`] = `
{
  "buttons": 17,
  "inputs": 0,
  "lengthBucket": 67,
  "selects": 0,
  "sha": "4052c22b2baaf110",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for learningLab 1`] = `
{
  "buttons": 22,
  "inputs": 0,
  "lengthBucket": 78,
  "selects": 0,
  "sha": "ef4f07fef818a3ca",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for nutritionLab 1`] = `
{
  "buttons": 19,
  "inputs": 0,
  "lengthBucket": 119,
  "selects": 0,
  "sha": "525ef2960c69a165",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for plateTectonics 1`] = `
{
  "buttons": 25,
  "inputs": 5,
  "lengthBucket": 125,
  "selects": 0,
  "sha": "1c8d318e33f1a1dd",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for printingPress 1`] = `
{
  "buttons": 25,
  "inputs": 0,
  "lengthBucket": 225,
  "selects": 0,
  "sha": "bf9fd3493b281ee2",
  "svgs": 2,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for raptorHunt 1`] = `
{
  "buttons": 48,
  "inputs": 1,
  "lengthBucket": 127,
  "selects": 0,
  "sha": "2611eaee2f72befd",
  "svgs": 1,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for roadReady 1`] = `
{
  "buttons": 64,
  "inputs": 3,
  "lengthBucket": 202,
  "selects": 0,
  "sha": "8480722f75089412",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for solarSystem 1`] = `
{
  "buttons": 25,
  "inputs": 1,
  "lengthBucket": 83,
  "selects": 0,
  "sha": "dd517f874f082502",
  "svgs": 0,
}
`;
